--- a/styles/place.css
+++ b/styles/place.css
@@ -36,7 +36,7 @@ img {
 }
 
 .container {
-    max-width: 1100px;
+    max-width:100%;
     margin-inline: auto;
     padding-inline: 1rem
 }
@@ -170,7 +170,7 @@ footer .container {
     background: var(--primary);
     color: var(--card);
     text-align: center;
-    padding: 2rem;
+    /* padding: 2rem; */
     max-width: 100%;
 }
 
